fix(truncate): enable inline links to have underline when used with truncate (#7485)
* fix(truncate): enable inline links to have underline with truncate

* fix(truncate): enable timestamp with tooltip to have underline when used with truncate

--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -770,6 +770,13 @@
   }
 }
 
+// enable inline link to have underline when used with truncate
+.#{$button}__text {
+  // stylelint-disable property-disallowed-list
+  text-decoration: inherit;
+  // stylelint-enable property-disallowed-list
+}
+
 .#{$button}__count {
   display: inline-flex;
   align-items: center;
